--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,6 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 #firebase
 firebase.json
-firebase.config.json
+firebase.config.ts
+path/to/secret-file.json
+*.env
