--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
-    "firebase-admin": "^12.3.1",
+    "firebase-admin": "^12.5.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
@@ -46,6 +46,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
