--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,7 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 
 #firebase
-firebase.json
 firebase.config.ts
+firbase-service-account.json
 path/to/secret-file.json
 *.env
