--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,8 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 
 #firebase
-firebase.config.ts
-firbase-service-account.json
+/config
+/firebase.config.ts
+.firbase-service-account.json
 path/to/secret-file.json
 *.env
