--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,7 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 #firebase
 /config
-/firebase.config.ts
+firebase.config.ts
 firebase-service-account.json
 firbase-service-account.json
 path/to/secret-file.json
